<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.silveremartin-dev</groupId>
  <artifactId>episteme-parent</artifactId>
  <version>1.0.0-beta2</version>
  <packaging>pom</packaging>

  <name>Episteme Unifying Parent</name>
  <description>Episteme - Unified Scientific Computing Framework (Parent POM)</description>
  <url>https://github.com/silveremartin-dev/Episteme</url>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>silveremartin</id>
      <name>Silvere Martin</name>
      <email>silvere.martin.dev@gmail.com</email>
      <organization>Episteme Project</organization>
      <organizationUrl>https://github.com/silveremartin-dev</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/silveremartin-dev/Episteme.git</connection>
    <developerConnection>scm:git:ssh://github.com:silveremartin-dev/Episteme.git</developerConnection>
    <url>https://github.com/silveremartin-dev/Episteme/tree/main</url>
  </scm>

  <modules>
    <module>episteme-core</module>
    <module>episteme-native</module>
    <module>episteme-grpc</module>
    <module>episteme-web</module>
    <module>episteme-examples</module>
    <module>episteme-dist</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    
    <!-- Versions des dépendances principales -->
    <auto-service.version>1.1.1</auto-service.version>
    <guava.version>33.0.0-jre</guava.version>
    <slf4j.version>2.0.12</slf4j.version>
    <junit.version>5.10.2</junit.version>
    <nd4j.version>1.0.0-M2.1</nd4j.version>
    <javacpp.version>1.5.10</javacpp.version>
    <openblas.version>0.3.26-${javacpp.version}</openblas.version>
    
    <javacpp.platform>${os.detected.classifier}</javacpp.platform>
    
    <target.java.version>21</target.java.version>
    <maven.compiler.release>${target.java.version}</maven.compiler.release>
    <maven.compiler.source>${target.java.version}</maven.compiler.source>
    <maven.compiler.target>${target.java.version}</maven.compiler.target>
    <extra.compiler.args></extra.compiler.args>
    <argLine></argLine>
    <mainClass></mainClass>
    <artifact.classifier></artifact.classifier>
    <artifact.suffix></artifact.suffix>
    <maven.jar.finalName>${project.artifactId}-${project.version}</maven.jar.finalName>
  </properties>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/silveremartin-dev/Episteme</url>
    </repository>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <extensions>
      <extension>
        <groupId>kr.motd.maven</groupId>
        <artifactId>os-maven-plugin</artifactId>
        <version>1.7.1</version>
      </extension>
    </extensions>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.3.2</version>
          <configuration>
            <failOnError>false</failOnError>
            <retryOnError>true</retryOnError>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.12.1</version>
          <configuration>
            <release>${maven.compiler.release}</release>
            <compilerArgs>
              <arg>--add-modules</arg>
              <arg>jdk.incubator.vector</arg>
              <arg>-Xpkginfo:always</arg>
              <arg>${extra.compiler.args}</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.3.0</version>
          <configuration>
            <finalName>${maven.jar.finalName}</finalName>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <profiles>
    <profile>
      <id>ossrh</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.4.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>ossrh</publishingServerId>
              <autoPublish>true</autoPublish>
              <waitUntil>published</waitUntil>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.0</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals><goal>jar-no-fork</goal></goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.6.3</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals><goal>jar</goal></goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals><goal>sign</goal></goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>legacy</id>
      <activation><activeByDefault>true</activeByDefault></activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <release>${maven.compiler.release}</release>
              <compilerArgs>
                <arg>--add-modules</arg>
                <arg>jdk.incubator.vector</arg>
                <arg>-Xpkginfo:always</arg>
              </compilerArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>release-jdk21</id>
      <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <artifact.classifier>jdk21</artifact.classifier>
        <artifact.suffix>-jdk21</artifact.suffix>
        <maven.jar.finalName>${project.artifactId}-${project.version}-jdk21</maven.jar.finalName>
      </properties>
    </profile>
    <profile>
      <id>release-jdk25</id>
      <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <artifact.classifier>jdk25</artifact.classifier>
        <artifact.suffix>-jdk25</artifact.suffix>
        <maven.jar.finalName>${project.artifactId}-${project.version}-jdk25</maven.jar.finalName>
      </properties>
    </profile>
  </profiles>
</project>
